# bosch-spatial-audio-linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  theisle_spatial.ini
sdk/: MumblePlugin.h
src/: audio_state.h  config.h  connection.cpp  connection.h  plugin.cpp
